--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                     </div>
                                     <div class="d-flex align-items-center mb-2">
                                         <i class="fas fa-envelope text-primary me-3"></i>
-                                        <p class="text-dark mb-0">kodexjaiker@gmail.com</p>
+                                        <p class="text-dark mb-0">official.kodexjaiker@gmail.com</p>
                                     </div>
                                     <div class="d-flex align-items-center mb-2">
                                         <i class="fa fa-phone-alt text-primary me-3"></i>
@@ -134,7 +134,7 @@ Whether it’s designing a product from scratch or turning wireframes into pixel
                                             <p class="mb-0"><strong class="fw-bold text-dark">Address :</strong> 11 Street NewTown</p>
                                         </div>
                                         <div class="col-6">
-                                            <p><strong class="fw-bold text-dark">Email :</strong> kodexjaiker@gmail.com</p>
+                                            <p><strong class="fw-bold text-dark">Email :</strong> official.kodexjaiker@gmail.com</p>
                                             <p class="mb-0"><strong class="fw-bold text-dark">Freelancer :</strong> Available</p>
                                         </div>
                                     </div>
@@ -890,7 +890,7 @@ Responsive design and device compatibility</p>
                                             </div>
                                             <div>
                                                 <h4>Mail Us</h4>
-                                                <p class="mb-0">Kodexjaiker@gmail.com</p>
+                                                <p class="mb-0">official.kodexjaiker@gmail.com</p>
                                             </div>
                                         </div>
                                         <div class="d-flex">
@@ -899,7 +899,7 @@ Responsive design and device compatibility</p>
                                             </div>
                                             <div>
                                                 <h4>Telephone</h4>
-                                                <p class="mb-0">(+233) 2754 34491</p>
+                                                <p class="mb-0">(+233) 2764 34491</p>
                                             </div>
                                         </div>
                                     </div>
@@ -977,7 +977,7 @@ Responsive design and device compatibility</p>
                                     <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
                                     <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
                                     <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                                    Designed By <a class="border-bottom text-white" name="https://htmlcodex.com">Kodex Jaiker</a>
+                                    Designed By <a class="border-bottom text-white" name=https://kodexjaiker.github.io/KodexJaiker/#pigraHome>Kodex Jaiker</a>
                                 </div>
                             </div>
                        </div>        
