--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                     </p>
                                     <div class="d-flex align-items-center mb-2">
                                         <i class="fas fa-map-marker-alt text-primary me-3"></i>
-                                        <p class="text-dark mb-0">11 NewTown.WhiteHouse</p>
+                                        <p class="text-dark mb-0">185/9 Akotex Down-Accra NewTown</p>
                                     </div>
                                     <div class="d-flex align-items-center mb-2">
                                         <i class="fas fa-envelope text-primary me-3"></i>
@@ -131,14 +131,14 @@ Whether it’s designing a product from scratch or turning wireframes into pixel
                                     <div class="row g-4 mb-4">
                                         <div class="col-6">
                                             <p><strong class="fw-bold text-dark">Phone :</strong> + 233-2764-34491</p>
-                                            <p class="mb-0"><strong class="fw-bold text-dark">Address :</strong> 11 Street NewTown</p>
+                                            <p class="mb-0"><strong class="fw-bold text-dark">Address :</strong> 185/9 Akotex Down- Accra NewTown</p>
                                         </div>
                                         <div class="col-6">
                                             <p><strong class="fw-bold text-dark">Email :</strong> official.kodexjaiker@gmail.com</p>
                                             <p class="mb-0"><strong class="fw-bold text-dark">Freelancer :</strong> Available</p>
                                         </div>
                                     </div>
-                                    <a href="#" class="btn btn-primary py-2 px-4"> <i class="fas fa-download me-2"></i>Download My CV</a>
+                                    <a href="https://kodexjaiker.tiiny.site" class="btn btn-primary py-2 px-4"> <i class="fas fa-download me-2"></i>View My CV</a>
                                 </div>
                             </div>
                         </div>
@@ -169,7 +169,7 @@ Whether it’s designing a product from scratch or turning wireframes into pixel
                                         <div class="d-flex align-items-center mb-3">
                                             <p class="fs-5 mb-0 me-4">National University</p>
                                             <div>
-                                                <span class="fa fa-calendar me-1"></span> 2022 - 2025
+                                                <span class="fa fa-calendar me-1"></span> 2018 - 2020
                                             </div>
                                         </div>
                                         <h4 class="mb-3">🎓Diploma in Computer</h4>
@@ -198,7 +198,7 @@ This diploma laid the groundwork for my career in tech by equipping me with esse
                                         <div class="d-flex align-items-center mb-3">
                                             <p class="fs-5 mb-0 me-4">Webster College</p>
                                             <div>
-                                                <span class="fa fa-calendar me-1"></span> 2022 - 2025
+                                                <span class="fa fa-calendar me-1"></span> 2020 - 2022
                                             </div>
                                         </div>
                                         <h4 class="mb-3">🎓UI/UX Design</h4>
@@ -226,7 +226,7 @@ Throughout the program, I worked on real-world projects, creating design solutio
                                         <div class="d-flex align-items-center mb-3">
                                             <p class="fs-5 mb-0 me-4">Oxford University</p>
                                             <div>
-                                                <span class="fa fa-calendar me-1"></span> 2022 - 2025
+                                                <span class="fa fa-calendar me-1"></span> 2022 - 2024
                                             </div>
                                         </div>
                                         <h4 class="mb-3">🎓Java Development</h4>
@@ -277,7 +277,7 @@ This course helped me understand how to write clean, efficient, and modular Java
                                         <div class="d-flex align-items-center mb-3">
                                             <p class="fs-5 mb-0 me-4">Historian</p>
                                             <div>
-                                                <span class="fa fa-calendar me-1"></span> 2022 - 2025
+                                                <span class="fa fa-calendar me-1"></span> 2024 - 2025
                                             </div>
                                         </div>
                                         <h4 class="mb-3">🏛️Seinor UI/UX Desinger</h4>
@@ -299,7 +299,7 @@ Building wireframes, </p>
                                         <div class="d-flex align-items-center mb-3">
                                             <p class="fs-5 mb-0 me-4">Historian</p>
                                             <div>
-                                                <span class="fa fa-calendar me-1"></span> 2022 - 2025
+                                                <span class="fa fa-calendar me-1"></span> 2024 - 2025
                                             </div>
                                         </div>
                                         <h4 class="mb-3">🎨UI/UX Designer</h4>
@@ -321,7 +321,7 @@ Interactive prototypes and responsive design</p>
                                         <div class="d-flex align-items-center mb-3">
                                             <p class="fs-5 mb-0 me-4">Historian</p>
                                             <div>
-                                                <span class="fa fa-calendar me-1"></span> 2022 - 2025
+                                                <span class="fa fa-calendar me-1"></span> 2025 - 2027
                                             </div>
                                         </div>
                                         <h4 class="mb-3">🖌️Junior Visual Designer</h4>
@@ -881,7 +881,7 @@ Responsive design and device compatibility</p>
                                             </div>
                                             <div>
                                                 <h4>Address</h4>
-                                                <p class="mb-0">11 Cotton Avenue.White House</p>
+                                                <p class="mb-0">185/9 Akotx Down.Accra NewTown</p>
                                             </div>
                                         </div>
                                         <div class="d-flex mb-4">
@@ -948,9 +948,7 @@ Responsive design and device compatibility</p>
                                     </div>
                                     <div class="col-12 wow fadeInUp" data-wow-delay="0.5s">
                                         <div class="rounded">
-                                            <iframe class="rounded w-100" 
-                                            style="height: 400px;"src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15883.504471846498!2d-0.2215178610352648!3d5.585322810324772!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdf9a3c33289c53%3A0x292e42643af1df4e!2sAccra%20New%20Town%2C%20Accra!5e0!3m2!1sen!2sgh!4v1749559158974!5m2!1sen!2sgh"></iframe></div>
-                                    </div>
+                                           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3970.96790175452!2d-0.2157449256453806!3d5.571763933492286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdf9a0fd874c9ff%3A0xd5e1362da1981ed7!2sAkotex%20St%2C%20Accra!5e0!3m2!1sen!2sgh!4v1750078624399!5m2!1sen!2sgh" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                 </div>
                             </div>
                        </div>
