--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         <div class="about-header bg-dark h-100 pt-6 pe-6 pb-6">
                             <div class="text-start d-flex flex-column justify-content-center wow fadeInUp" data-wow-delay="0.1s">
                                 <p class="text-white sub-title">About Me</p>
-                                <h1 class="display-6 text-white mb-0">UI Designer based in Accra, NewTown 2023</h1>
+                                <h1 class="display-6 text-white mb-0">UI Designer based in Ghana, Akotex down acc 2023</h1>
                             </div>
                         </div>
                     </div>
